add kafka stream sql

--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,20 @@
 			<version>1.7.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-spring</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 	</dependencies>
 </project>
