--- a/src/main/resources/network-data.properties
+++ b/src/main/resources/network-data.properties
@@ -1,5 +1,5 @@
 topic.names = network_data
 poll.timeout = 1000
 application.id = network_data_processor
-bootstrap.servers = localhost:9092
+bootstrap.servers = dn1:9092
 num.stream.threads = 1
